Split up functionality of dealing with PB files
In preparation of supporting multiple file types that support extraction via protobuf
we add a new interface PlainFileHandler.